# qpixrtd

./: .gitignore  CMakeLists.txt  README.md  build.sh  rootlogon.C  setup.sh
CurrentGen/: CMakeLists.txt  CurrentGen.cpp
EXAMPLE/: CMakeLists.txt  EXAMPLE  EXAMPLE.cpp  README.txt  background_slimmer.c  makefile  out_example.root  params.json  recompile.sh  signal_slimmer.c  slimmer.c
Electronics_comp/: CMakeLists.txt  Untitled-Copy1.ipynb  develop.cpp  mitch_10cm.root  mitch_1cm.root  mitch_proton_10cm.root  out_example.root  recompile.sh
Electronics_comp/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Electronics_comp/Out_files/Electrons/: Electron_0.txt  Electron_1.txt  Electron_10.txt  Electron_11.txt  Electron_12.txt  Electron_13.txt  Electron_14.txt  Electron_15.txt  Electron_16.txt  Electron_17.txt  Electron_18.txt  Electron_19.txt  Electron_2.txt  Electron_20.txt  Electron_21.txt  Electron_22.txt  Electron_23.txt  Electron_24.txt  Electron_3.txt  Electron_4.txt  Electron_5.txt  Electron_6.txt  Electron_7.txt  Electron_8.txt  Electron_9.txt
Electronics_comp/Out_files/Muons/: Muon_0.txt  Muon_1.txt  Muon_10.txt  Muon_11.txt  Muon_12.txt  Muon_13.txt  Muon_15.txt  Muon_16.txt  Muon_18.txt  Muon_2.txt  Muon_20.txt  Muon_21.txt  Muon_23.txt  Muon_24.txt  Muon_5.txt  Muon_6.txt  Muon_7.txt  Muon_8.txt  Muon_9.txt
Electronics_comp/Out_files/Protons/: Proton_0.txt  Proton_1.txt  Proton_10.txt  Proton_11.txt  Proton_12.txt  Proton_13.txt  Proton_14.txt  Proton_15.txt  Proton_16.txt  Proton_17.txt  Proton_18.txt  Proton_19.txt  Proton_2.txt  Proton_20.txt  Proton_21.txt  Proton_22.txt  Proton_23.txt  Proton_24.txt  Proton_3.txt  Proton_4.txt  Proton_5.txt  Proton_6.txt  Proton_7.txt  Proton_8.txt  Proton_9.txt
Example01/: Example01  Example01.cc  Example01_Output.txt  Proton_Output_1000.txt  Proton_Output_3000.txt  Re-compile.sh  makefile
Example02/: Example02  Example02.cc  Proton_100.txt  makefile
RTD/: CMakeLists.txt  README.txt  RTD.cpp  recompile.sh
RTDCuda/: CMakeLists.txt  RTDCuda.cu  RTDCuda.h  RTDCudaFileManager.cpp  RTDCudaFileManager.h  RTDCudaMain.cpp  RTDStructures.cu  RTDStructures.h  RTDThrust.cu  RTDThrust.h
RTDFriend/: CMakeLists.txt  RTDFriend.cpp  rtdRadiogenic.cpp  rtdRadiogenic.h
develop/: Agian.sh  CMakeLists.txt  Electron_22_3MeV_10cm.csv  Electron_44_3MeV_100cm.csv  Electron_55_3MeV_10cm.csv  MARLEY_100_Events.root  Proton_77_500MeV_10cm.csv  Proton_88_500MeV_10cm.csv  Untitled.ipynb  develop.cpp  mitch.root  mitch_100cm.root  out_example.root  recompile.sh
develop/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
include/Qpix/: ElectronHandler.h  Electronics.h  PixelResponse.h  ROOTFileManager.h  Random.h  Random_Generator.h  ReadG4root.h  ReadG4txt.h  Structures.h  WriteRoot.h  XorShift256.h  Xoshiro_Full.h
job/: note  submit.sh
job/log/: .gitignore
job/scripts/: .gitignore
root_read_class/: makefile  out.root  recompile.sh  root_macro  root_macro.cpp  test.root
root_read_test/: recompile.sh  root_macro  root_macro copy.cpp  root_macro.cpp  test2.root  test_muon.root
source/: CMakeLists.txt  ElectronHandler.cc  Electronics.cpp  Electronics.h  LinkDef.h  PixelResponse.cc  PixelResponse.cpp  PixelResponse.h  ROOTFileManager.cpp  ROOTFileManager.h  Random.cc  Random.cpp  Random_Generator.cpp  ReadG4root.cc  ReadG4root.cpp  ReadG4txt.cc  Structures.cc  Structures.cpp  Structures.h  WriteRoot.cpp  XorShift256.cc
test01/: Plottin.ipynb  RandomNormal.txt  RandomPoisson.txt  RandomUniform.txt  Re-compile.sh  makefile  test  test.cc
test01/.ipynb_checkpoints/: Plottin-checkpoint.ipynb
test02/: Electron_Diffusion  Electron_Diffusion.cc  makefile  test10MeV.txt
